k8s/deployment/gateway/gateway-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
  labels:
    app: gateway-svc
    version: v1
spec:
  selector:
    matchLabels:
      app: gateway-svc
      version: v1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway-svc
        version: v1
    spec:
      containers:
        - env:
            - name: GATEWAY_SVC_PORT
              value: "3000"
            - name: INGREDIENT_SVC_URL
              value: ingredient-svc.demo.svc.cluster.local:50051
            - name: RECIPE_SVC_URL
              value: recipe-svc.demo.svc.cluster.local:50052
          name: gateway-svc
          image: registry.gitlab.com/hoanganhnguyen1994/ui-management:gateway-svc-v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 150Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
