k8s/deployment/gateway/gateway-svc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: demo
  labels:
    app: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 3000
