k8s/deployment/gateway/gateway-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  labels:
    app: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
