k8s/deployment/gateway/gateway-svc-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      more_set_headers "X-Content-Type-Options: nosniff";
#      more_set_headers "X-Download-Options: noopen";
#      more_set_headers "X-UA-Compatible: IE=Edge,chrome=1";
#      more_set_headers "X-XSS-Protection: 1; mode=block";
#      more_set_headers "X-Frame-Options: SAMEORIGIN";
#    nginx.ingress.kubernetes.io/enable-cors: "false"
#    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
#    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
#    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
#
#  name: gateway-svc
#spec:
#  rules:
#    - host: "api.simple.ui"
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: gateway-svc
#              servicePort: 3000
#            pathType: ImplementationSpecific


---



apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    kubernetes.io/ingress.class: nginx
  name: gateway-svc
spec:
  rules:
    - host: api.simple.ui
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway-svc
              servicePort: 80
